# flowd

./: .gitignore  AGENTS.md  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  PRIVATE_CORE_BOUNDARY.md  PROMPTS_FOR_CODEX.md  README.md  RELEASE_CHECKLIST.md  TASKS.md  flowd_plan_and_tasks.md
.codex/: config.toml
crates/flow-adapters/: Cargo.toml
crates/flow-adapters/src/: browser.rs  clipboard.rs  file_watcher.rs  lib.rs  terminal.rs  window.rs
crates/flow-analysis/: Cargo.toml
crates/flow-analysis/src/: intelligence_boundary.rs  intelligence_contract_mapping.rs  lib.rs
crates/flow-analysis/tests/: demo_scenarios 2.rs  intelligence_fixtures.rs
crates/flow-cli/: Cargo.toml
crates/flow-cli/src/: main.rs
crates/flow-cli/tests/: config.rs  doctor.rs  stats.rs  suggest.rs  workflows.rs
crates/flow-core/: Cargo.toml
crates/flow-core/src/: config.rs  errors.rs  events.rs  lib.rs
crates/flow-daemon/: Cargo.toml
crates/flow-daemon/src/: analysis.rs  main.rs  observation.rs
crates/flow-db/: Cargo.toml
crates/flow-db/src/: lib.rs  migrations.rs  repo.rs
crates/flow-dsl/: Cargo.toml
crates/flow-dsl/src/: lib.rs
crates/flow-exec/: Cargo.toml
crates/flow-exec/src/: engine.rs  lib.rs  service.rs
crates/flow-patterns/: Cargo.toml
crates/flow-patterns/src/: detect.rs  lib.rs  normalize.rs  sessions.rs
docs/: PLAN.md  architecture-diagram.md  architecture.md  automation-dsl.md  dogfooding.md  event-model.md  example-workflows.md  privacy.md  release-notes-v0.2.md  roadmap.md  system-overview.md
examples/: config.sample.toml
examples/packs/demo-pack/: workflow-pack.toml
examples/packs/demo-pack/automations/: rename-downloads.yaml
fixtures/: README.md  invoice_file_events.json
fixtures/demo_scenarios/: README.md  downloads_sorting.raw_events.json  invoice_organization.raw_events 2.json  manifest 2.json  screenshot_cleanup.raw_events 2.json  terminal_file_organization.raw_events.json
