[workspace]
members = [
  "crates/flow-core",
  "crates/flow-analysis",
  "crates/flow-daemon",
  "crates/flow-cli",
  "crates/flow-db",
  "crates/flow-adapters",
  "crates/flow-patterns",
  "crates/flow-dsl",
  "crates/flow-exec",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["OpenAI User"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
notify = "8.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tempfile = "3"
