[package]
name = "flow-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flow-core = { path = "../flow-core" }
flow-db = { path = "../flow-db" }
flow-patterns = { path = "../flow-patterns" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
flow-adapters = { path = "../flow-adapters" }
tempfile.workspace = true
