[package]
name = "flow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
flow-core = { path = "../flow-core" }
flow-analysis = { path = "../flow-analysis" }
flow-db = { path = "../flow-db" }
flow-dsl = { path = "../flow-dsl" }
flow-exec = { path = "../flow-exec" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
flow-adapters = { path = "../flow-adapters" }
flow-patterns = { path = "../flow-patterns" }
tempfile.workspace = true
