[package]
name = "flow-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flow-adapters = { path = "../flow-adapters" }
flow-core = { path = "../flow-core" }
flow-db = { path = "../flow-db" }
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
