[package]
name = "flow-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flow-core = { path = "../flow-core" }
flow-patterns = { path = "../flow-patterns" }
rusqlite.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
flow-adapters = { path = "../flow-adapters" }
