[package]
name = "flow-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flow-core = { path = "../flow-core" }
flow-db = { path = "../flow-db" }
flow-dsl = { path = "../flow-dsl" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
